Changelog
=========

2.4.dev0 - (unreleased)
-----------------------

2.3 - (2017-12-12)
------------------
* Change: Replace eeacms/zptlint with eeacms/plone-test:4 zptlint
  [avoinea refs #90415]

2.2 - (2017-05-15)
------------------
* Change: fixed PyLint warnings and errors
  [eduard-fironda refs #84949]

2.1 - (2017-05-08)
------------------
* Feature: secure cookie over HTTPS disabled
  [alecghica refs #84485]

2.0 - (2017-04-24)
------------------
* Change: updated package information
  [eduard-fironda]

1.9 - (2017-01-17)
------------------
* Bug fix: Safely fix varnish settings
  [avoinea]

1.8 - (2016-12-28)
------------------
* Feature: Also fix varnish settings
  [voineali refs #78655]

1.7 - (2016-09-26)
------------------
* Feature: Also fix MEMCACHE_SERVER on all Memcache manager objects
  [voineali refs #70800]
* Bug fix: Fix Plone users roles
  [voineali refs #70800]

1.6 - (2016-09-19)
------------------
* Feature: set memcached domain to localhost for
  all "Memcached Manage" objects
  [alecghica refs #76251]

1.5 - (2016-08-17)
------------------
* Bug fix: Fix zope user roles
  [avoinea]

1.4 - (2016-05-19)
------------------
* Bug fix: Fix pylint warnings
  [chiridra refs #71940]

1.3 - (2016-02-15)
------------------
* Bug fix: Don't crash Plone instance on ConflictError
  [voineali refs #68160]

1.2 - (2015-05-15)
------------------
* Feature: Support read-only database
  [voineali refs #25160]

1.1 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins build install script to the install
  script from the main EEA CPB repository
  [olimpiurob refs #22402]

1.0 - (2014-10-15)
------------------
- Initial release
