@@ -3,6 +3,8 @@ Changelog
 
 2.4.dev0 - (unreleased)
 -----------------------
+* Feature: disable the automatic activation of global status message
+  [alecghica refs #92952]
 
 2.3 - (2017-12-12)
 ------------------
